# matrux

./: Cargo.toml  README.md
examples/: line.rs
src/: activation.rs  layer.rs  lib.rs  matrix.rs  nn.rs  scalar.rs
src/optimizer/: mod.rs  sgd.rs
src/optimizer/learning_rate/: exp.rs  mod.rs
src/plan/: cpu_eval.rs  mod.rs  op.rs
