[package]
name = "matrux"
version = "0.1.0"
edition = "2021"
authors = ["Protryon <max.bruce12@gmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/Protryon/matrux"
description = "Neural network implementation in rust"
keywords = [ "neural", "network", "backpropagation", "learning" ]

[dependencies]
half = "1.8"
